# yolo-pose-estimation

./: .gitignore  generate_demo.py  label_encoder.pkl  main.py  model.ipynb  model.py  pose.keras  predictions.json  pyproject.toml
.ipynb_checkpoints/: model-checkpoint.ipynb
ype/: model.py  preprocess.py
