[tool.poetry]
name = "yolo-pose-estimation"
version = "0.1.0"
description = ""
authors = ["mikeshinoda <53910940+desonglll@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.3.18"
scikit-learn = "^1.5.2"
tensorflow = "^2.17.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
